Project

General

Profile

Actions

Bug #20182

closed

[api] is_exclusive_lock_owner shouldn't return -EBUSY

Added by Jason Dillaman almost 7 years ago. Updated over 6 years ago.

Status:
Resolved
Priority:
Normal
Assignee:
Jason Dillaman
Target version:
-
% Done:

0%

Source:
Tags:
Backport:
kraken,jewel
Regression:
No
Severity:
3 - minor
Reviewed:
Affected Versions:
ceph-qa-suite:
Pull request ID:
Crash signature (v1):
Crash signature (v2):

Description

This error code indicates that another client owns the exclusive lock. Instead, it should return 0 with the boolean set to false.


Related issues 2 (0 open2 closed)

Copied to rbd - Backport #20266: kraken: [api] is_exclusive_lock_owner shouldn't return -EBUSYResolvedNathan CutlerActions
Copied to rbd - Backport #20267: jewel: [api] is_exclusive_lock_owner shouldn't return -EBUSYResolvedNathan CutlerActions
Actions #1

Updated by Jason Dillaman almost 7 years ago

  • Status changed from In Progress to Fix Under Review
Actions #2

Updated by Mykola Golub almost 7 years ago

  • Status changed from Fix Under Review to Pending Backport
Actions #3

Updated by Nathan Cutler almost 7 years ago

  • Copied to Backport #20266: kraken: [api] is_exclusive_lock_owner shouldn't return -EBUSY added
Actions #4

Updated by Nathan Cutler almost 7 years ago

  • Copied to Backport #20267: jewel: [api] is_exclusive_lock_owner shouldn't return -EBUSY added
Actions #5

Updated by Nathan Cutler over 6 years ago

  • Status changed from Pending Backport to Resolved
Actions

Also available in: Atom PDF